# testitwinaiplugins

./: CITATION.cff  Dockerfile  README.md  pyproject.toml
.github/workflows/: container-ci.yaml  pytest.yaml  sqaaas.yaml
ci/: dagger.json
env-files/: Dockerfile  jupyter.Dockerfile
src/itwinai/plugins/my_awesome_plugin/another_plugin_subfolder/: yet_another_module.py
tests/: test_example.py
