[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itwinai-awesome-plugin"
version = "0.1.0"
description = "User's custom plugin for itwinai"
authors = [{ name = "User Name", email = "user@example.com" }]
dependencies = ["itwinai"]

[tool.setuptools.packages.find]

# Declare this package as part of the `itwinai.plugins` namespace
where = ["src"]

# Make sure to list all the plugin subfolders here,
# otherwise the plugin may not be installed correctly!
include = [
    "itwinai.plugins.my_awesome_plugin",
    "itwinai.plugins.my_awesome_plugin.plugin_subfolder",
    "itwinai.plugins.my_awesome_plugin.another_plugin_subfolder",
]
